--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>高英健的个人网站</title>
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-Hello World!
+<div id="app"></div>
+<script src="./main.js"></script>
 </body>
