--- a/static/index.html
+++ b/static/index.html
@@ -2,10 +2,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>高英健的个人网站</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
 <div id="app"></div>
-<script src="vue.bundle.js"></script>
-<script src="main.js"></script>
+<script src="/vue.bundle.js"></script>
+<script src="/main.js"></script>
 </body>
